<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shippingWeight"
            />
        <EditText
            android:id="@+id/input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"/>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/choices_group"
        android:orientation="vertical"
        android:checkedButton="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/next"
            android:text="@string/nextDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/second"
            android:text="@string/secondDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/stand"
            android:text="@string/standard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/insuranceChecked"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insurance"
        android:checked="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/window"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cost"
            android:textSize="20sp"
            android:layout_weight="1.5"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculator"
            android:onClick="calculate"/>

    </LinearLayout>

</LinearLayout>